--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: September 15th, 2020 07:52</p>
+                    <p style="font-size:110%;">Last modification: September 17th, 2020 09:24</p>
                 </div>
             </div>
         </div>
@@ -258,6 +258,7 @@
                           <th scope="col">Professor(s)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                           -->
                           <th scope="col">Date</th>
+                          <th scope="col">Id</th>
                           <th scope="col">Modality</th>
                           <th scope="col">Starts at</th>
                           <th scope="col">Material</th>
@@ -268,6 +269,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">21 Sep, 2020</th>
+                          <td>L1</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -276,6 +278,7 @@
                         </tr>
                         <tr>
                           <th scope="row">24 Sep, 2020</th>
+                          <td>L2</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -284,6 +287,7 @@
                         </tr>
                         <tr>
                           <th scope="row">28 Sep, 2020</th>
+                          <td>L3</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -292,6 +296,7 @@
                         </tr>
                         <tr>
                           <th scope="row">1 Oct, 2020</th>
+                          <td>L4</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -300,6 +305,7 @@
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">5 Oct, 2020</th>
+                          <td>L5</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -308,6 +314,7 @@
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">8 Oct, 2020</th>
+                          <td>L6</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -316,6 +323,7 @@
                         </tr>
                         <tr>
                           <th scope="row">12 Oct, 2020</th>
+                          <td>L7</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -327,11 +335,13 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
+                          <td> - </td>
                           <td>i-Log data collection starts.</td>
                           <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">15 Oct, 2020</th>
+                          <td>L8</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -340,6 +350,7 @@
                         </tr>
                         <tr>
                           <th scope="row">19 Oct, 2020</th>
+                          <td>L9</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -348,6 +359,7 @@
                         </tr>
                         <tr>
                           <th scope="row">22 Oct, 2020</th>
+                          <td>L10</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -359,11 +371,13 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
+                          <td> - </td>
                           <td>i-Log data collection end.</td>
                           <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">26 Oct, 2020</th>
+                          <td>L11</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -372,6 +386,7 @@
                         </tr>
                         <tr>
                           <th scope="row">29 Oct, 2020</th>
+                          <td>L12</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -380,6 +395,7 @@
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">2 Nov, 2020</th>
+                          <td>L13</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -388,6 +404,7 @@
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">5 Nov, 2020</th>
+                          <td>L14</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -396,6 +413,7 @@
                         </tr>
                         <tr>
                           <th scope="row">9 Nov, 2020</th>
+                          <td>L15</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -404,6 +422,7 @@
                         </tr>
                         <tr>
                           <th scope="row">12 Nov, 2020</th>
+                          <td>L16</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -412,6 +431,7 @@
                         </tr>
                         <tr>
                           <th scope="row">15 Nov, 2020</th>
+                          <td>L17</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -423,11 +443,13 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
+                          <td> - </td>
                           <td>Data from the i-Log data collection experiment is made available to the students.</td>
                           <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">19 Nov, 2020</th>
+                          <td>L18</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -436,6 +458,7 @@
                         </tr>
                         <tr>
                           <th scope="row">23 Nov, 2020</th>
+                          <td>L19</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -444,6 +467,7 @@
                         </tr>
                         <tr>
                           <th scope="row">26 Nov, 2020</th>
+                          <td>L20</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -452,6 +476,7 @@
                         </tr>
                         <tr>
                           <th scope="row">30 Nov, 2020</th>
+                          <td>L21</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -460,6 +485,7 @@
                         </tr>
                         <tr>
                           <th scope="row">3 Dec, 2020</th>
+                          <td>L22</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -471,11 +497,13 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
+                          <td> - </td>
                           <td>No lecture, holiday</td>
                           <td> - </td>
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">10 Dec, 2020</th>
+                          <td>L23</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
@@ -484,6 +512,7 @@
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">14 Dec, 2020</th>
+                          <td>L24</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
