--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <tr>
                           <th scope="row">24 Sep, 2020</th>
                           <td>L2</td>
-                          <td style="text-align: center;"><span class="label label-info">Async</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
                           <td>Theory driven vs. Data driven vs. Knowledge Driven </td>
@@ -307,38 +307,29 @@
                         <tr>
                           <th scope="row">1 Oct, 2020</th>
                           <td>L4</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
                           <td>I. Bison</td>
                         </tr>
-                        <tr style="background-color: lightpink">
+                        <tr>
                           <th scope="row">5 Oct, 2020</th>
                           <td>L5</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Groups project discussion.</td>
-                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
-                        </tr>
-                        <tr style="background-color: lightpink">
-                          <th scope="row">8 Oct, 2020</th>
-                          <td>L6</td>
-                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
-                          <td>11:30</td>
-                          <td>Slides, Video</td>
-                          <td>Groups project discussion.</td>
-                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                          <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data. UPDATE</td>
+                          <td>I. Bison, M. Busso</td>
                         </tr>
                         <tr>
-                          <th scope="row">12 Oct, 2020</th>
-                          <td>L7</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <th scope="row">8 Oct, 2020</th>
+                          <td>L6</td>
+                          <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
-                          <td>I. Bison</td>
+                          <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
+                          <td>M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">12 Oct, 2020</th>
@@ -349,14 +340,23 @@
                           <td>i-Log data collection starts.</td>
                           <td> - </td>
                         </tr>
-                        <tr>
-                          <th scope="row">15 Oct, 2020</th>
-                          <td>L8</td>
-                          <td style="text-align: center;"><span class="label label-info">Async</span></td>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">12 Oct, 2020</th>
+                          <td>L7</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
-                          <td>M. Zeni</td>
+                          <td>Groups: project plan discussion.</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">15 Oct, 2020</th>
+                          <td>L8</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Groups: project plan discussion.</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
                         <tr>
                           <th scope="row">19 Oct, 2020</th>
@@ -377,12 +377,12 @@
                           <td>M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
-                          <th scope="row">16 Oct, 2020</th>
+                          <th scope="row">25 Oct, 2020</th>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
-                          <td>i-Log data collection end.</td>
+                          <td>i-Log data collection ends.</td>
                           <td> - </td>
                         </tr>
                         <tr>
@@ -401,7 +401,16 @@
                           <td>11:30</td>
                           <td>Slides, Video</td>
                           <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
-                          <td>?</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr style="background-color: lightblue">
+                          <th scope="row">29 Oct, 2020</th>
+                          <td> - </td>
+                          <td> - </td>
+                          <td> - </td>
+                          <td> - </td>
+                          <td>Limesurvey data collection starts.</td>
+                          <td> - </td>
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">2 Nov, 2020</th>
@@ -409,7 +418,7 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Groups presentations</td>
+                          <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightpink">
@@ -418,8 +427,17 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Groups presentations</td>
+                          <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr style="background-color: lightblue">
+                          <th scope="row">9 Nov, 2020</th>
+                          <td> - </td>
+                          <td> - </td>
+                          <td> - </td>
+                          <td> - </td>
+                          <td>Limesurvey data collection ends.</td>
+                          <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">9 Nov, 2020</th>
