--- a/index.html
+++ b/index.html
@@ -296,31 +296,52 @@
                           <td>I. Bison, F. Giunchiglia</td>
                         </tr>
                         <tr>
-                          <th scope="row">28 Sep, 2020</th>
-                          <td>L3</td>
-                          <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <th scope="row" rowspan="2">28 Sep, 2020</th>
+                          <td rowspan="2">L3</td>
+                          <td style="text-align: center;"><span class="label label-info">Async</span></td>     
+                          <td>11:30</td>                  
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
                           <td>F. Giunchiglia</td>
                         </tr>
                         <tr>
-                          <th scope="row">1 Oct, 2020</th>
-                          <td>L4</td>
-                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
-                          <td>11:30</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
+                          <td>12:30</td>                   
+                          <td>Slides, Video</td>
+                          <td>Group formation, instructions and How to do a literature review.</td>
+                          <td>M. Busso</td>
+                        </tr>
+                        <tr>
+                          <th scope="row" rowspan="2">1 Oct, 2020</th>
+                          <td rowspan="2">L4</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
+                          <td>11:30</td>                  
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr>
-                          <th scope="row">5 Oct, 2020</th>
-                          <td>L5</td>
-                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
-                          <td>11:30</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
+                          <td>12:30</td>                   
                           <td>Slides, Video</td>
-                          <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data. UPDATE</td>
-                          <td>I. Bison, M. Busso</td>
+                          <td>How to write a research project 1st Part.</td>
+                          <td>M. Busso</td>
+                        </tr>
+                        <tr>
+                          <th scope="row" rowspan="2">5 Oct, 2020</th>
+                          <td rowspan="2">L5</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
+                          <td>11:30</td>                  
+                          <td>Slides, Video</td>
+                          <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
+                          <td>12:30</td>                   
+                          <td>Slides, Video</td>
+                          <td>How to prepare a questionnaire and how to write a research project 2nd Part.</td>
+                          <td>M. Busso</td>
                         </tr>
                         <tr>
                           <th scope="row">8 Oct, 2020</th>
