--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                           <td rowspan="2">L5</td>
                           <td rowspan="2" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
                           <td rowspan="2">11:30</td> 
-                          <td rowspan="2">Link</td>                 
+                          <td rowspan="2"><a href="https://unitn.zoom.us/j/88475311632">Link</a> (181624)</td>               
                           <td rowspan="2">Video</td>
                           <td>Slides</td>
                           <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
