--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td> - </td>
                           <td> - </td>
-                          <td>Video</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=658657">Video</a></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/1odf7M84aRovUL01OzGNH0yy_tq7cd3iz/view?usp=sharing">Slides</a></td>
                           <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
                           <td>M. Zeni</td>
